website/content/en/v1.4/contributing/community-meetings.md
---
title: "Community Meetings"
linkTitle: "Community Meetings"
weight: 10
description: >
  Join the Karpenter Community Meetings
---

Karpenter hosts two types of regular community meetings to foster collaboration and maintain project health:

The **Working Group** meetings focus on project direction, technical discussions, and feature development. These bi-weekly sessions bring together contributors, users, and maintainers to review designs, plan releases, and address architectural decisions that shape Karpenter's future.

The **Issue Triage** meetings, held weekly, are dedicated to maintaining project health through focused issue management across our repositories. These sessions ensure proper prioritization, assignment coordination, and timely response to community contributions.

Meeting times alternate to accommodate our global community. All interested participants are welcome to join, contribute, and learn more about Karpenter.

### Issue Triage Meetings
Karpenter is expanding our community meetings to include dedicated Issue Triage sessions alongside our regular Working Group meetings. This addition aims to improve issue management across both kubernetes-sigs/karpenter and karpenter-provider-aws repositories.

These weekly meetings rotate between repositories and time zones to accommodate our global community. These dedicated triage sessions focus on:
- Issue prioritization
- Assignment coordination
- Discussion of complex issues
- Maintaining repository health

#### Schedule (Mondays):
- **Week 1**: kubernetes-sigs/karpenter @ 9:00 AM PST (Europe-friendly)
- **Week 2**: karpenter-provider-aws @ 9:00 AM PST (Europe-friendly)
- **Week 3**: kubernetes-sigs/karpenter @ 3:00 PM PST (Americas-friendly)
- **Week 4**: karpenter-provider-aws @ 3:00 PM PST (Americas-friendly)

### Working Group Meetings

The Karpenter Working Group meetings serve as a collaborative forum for project development, technical discussions, and community engagement. These sessions bring together contributors, users, and maintainers to shape the project's direction and ensure its continued success. Through these meetings, we align on architectural decisions, review critical features, and address community needs.

Key focus areas include:
- Review and discussion of design proposals and technical implementations
- Planning of upcoming releases and feature roadmaps
- Coordination between contributors and cross-team collaboration
- Technical deep-dives on specific components and challenges
- Discussion of user feedback and community requirements

The working group provides a platform for both synchronous decision-making and asynchronous follow-ups, ensuring the project maintains its technical excellence while growing its community impact.


#### Schedule (Alternating Thursdays):

Our established Working Group meetings continue on a bi-weekly schedule:

- 9:00 AM PST (Europe-friendly)
- 3:00 PM PST (Americas-friendly)

### Getting Involved
All community members are welcome to join these meetings. Meeting links and calendar invites are shared through our usual communication channels.

- All invites are managed through our [Calendar](https://calendar.google.com/calendar/u/0?cid=N3FmZGVvZjVoZWJkZjZpMnJrMmplZzVqYmtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ).
- Alternatively, you can use our [iCal Export](https://calendar.google.com/calendar/ical/7qfdeof5hebdf6i2rk2jeg5jbk%40group.calendar.google.com/public/basic.ics) to add the events to Outlook or other email providers.

{{% alert title="Meeting Access" %}}
Join our meetings using the following credentials:

🔗 **Zoom**: [https://zoom.us/j/95618088729](https://zoom.us/j/95618088729)  
🆔 **Meeting ID**: 956 1808 8729       
🔑 **Passcode**: 77777

Need help? Contact the maintainers on Slack.
{{% /alert %}}

Add future questions or read past discussions in our [Working Group Log](https://docs.google.com/document/d/18BT0AIMugpNpiSPJNlcAL2rv69yAE6Z06gUVj7v_clg).
